# store-intelligence

./: .coveragerc  .env.example  .gitignore  CHOICES.md  DESIGN.md  Dockerfile.api  Dockerfile.dashboard  Dockerfile.pipeline  README.md  docker-compose.yml  inject_demo_live.py  load_pos.py  pyproject.toml  pytest.ini  requirements.api.txt  requirements.pipeline.txt  requirements.test.txt  requirements.txt  run_infinite_demo.py
.github/workflows/: ci.yml  demo_injector.yml
app/: __init__.py  config.py  main.py
app/api/: middleware.py
app/api/routers/: events.py  health.py  stores.py
app/domain/: enums.py  models.py  schemas.py
app/infrastructure/: database.py  repositories.py
app/infrastructure/migrations/: README.md  __init__.py
app/services/: analytics.py  anomaly.py  deduplication.py  pos_correlator.py
dashboard/: app.py
pipeline/: __init__.py  detector.py  entry_exit_detector.py  event_emitter.py  load_sample_data.py  queue_detector.py  reid_engine.py  run.sh  run_pipeline.py  session_manager.py  staff_classifier.py  tracker.py  video_processor.py  zone_manager.py
sample_data/: POS - sample transactionsb1e826f.csv  store_layout.json
scripts/: ingest_sample.sh  run_tests.sh
sql/: init.sql
tests/: conftest.py  test_anomalies.py  test_edge_cases.py  test_funnel.py  test_ingestion.py  test_metrics.py  test_reentry.py  test_services.py  test_store_level_deduplication.py
